--- a/.github/workflows/laravel-pint.yml
+++ b/.github/workflows/laravel-pint.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout codebase
         uses: actions/checkout@v4.2.2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Setup PHP and Composer
         uses: shivammathur/setup-php@v2
@@ -21,10 +23,15 @@ jobs:
         run: composer global require laravel/pint
 
       - name: Run Pint
-        run: pint --test
+        run: pint
 
       - name: Push changes back to reop
-        run: echo "TODO"
+        run: |
+          git config user.name "Phyo Thiha"
+          git config user.email "phyothiha96@gmail.com"
+          git add .
+          git commit -m 'Push new changes'
+          git push
 
 
 
