add exit code for git commit

--- a/.github/workflows/laravel-pint.yml
+++ b/.github/workflows/laravel-pint.yml
@@ -30,7 +30,7 @@ jobs:
           git config user.name "Phyo Thiha"
           git config user.email "phyothiha96@gmail.com"
           git add .
-          git commit -m 'Push new changes'
+          git commit -m 'Laravel Pint' || exit 0
           git push
 
 
